--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -9,7 +9,9 @@ ARG USERNAME=vscode
 ENV PATH $PATH:/usr/local/go/bin:/workspaces/go-cli/go/bin
 
 RUN echo "$(date)    docker build started" >> /home/$USERNAME/status && \
-    mkdir -p /home/vscode/go && \
+    mkdir -p /home/$USERNAME/.local/bin && \
+    mkdir -p /home/$USERNAME/.oh-my-zsh/completions && \
+    mkdir -p /home/$USERNAME/go && \
     wget https://go.dev/dl/go1.17.6.linux-amd64.tar.gz && \
     tar -C /usr/local -xzf go1.17.6.linux-amd64.tar.gz && \
     rm -f go1.17.6.linux-amd64.tar.gz && \
